force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/agf__ADM_Team_Dependency__c.object-meta.xml
<CustomObject>
    <description>Used to track dependencies between teams for a given  release</description>
    <label>Team Dependency</label>
    <nameField>
        <displayFormat>TD-{0000000}</displayFormat>
        <label>Team Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>