force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Associated_with_Program__c.field-meta.xml
<CustomField>
    <fullName>agf__Associated_with_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated with Program</label>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Team Dependencies (Associated with Program)</relationshipLabel>
    <relationshipName>Associated_Team_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>