force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Deliver_By__c.field-meta.xml
<CustomField>
    <fullName>agf__Deliver_By__c</fullName>
    <inlineHelpText>If the deliverable is needed by a specific date, indicate that in this field.</inlineHelpText>
    <label>Needed by (date)</label>
    <type>Date</type>
</CustomField>