force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Dependent_User_Story__c.field-meta.xml
<CustomField>
    <fullName>agf__Dependent_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work that is dependent on the completion of the specified deliverable.</description>
    <inlineHelpText>The work that is dependent on the completion of  the specified deliverable.</inlineHelpText>
    <label>Work With Dependency</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>Team Dependencies needed for this work</relationshipLabel>
    <relationshipName>Team_Dependencies_For_Story</relationshipName>
    <type>Lookup</type>
</CustomField>