force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Epic__c.field-meta.xml
<CustomField>
    <fullName>agf__Epic__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Epic</label>
    <referenceTo>agf__ADM_Epic__c</referenceTo>
    <relationshipLabel>Team Dependencies</relationshipLabel>
    <relationshipName>Team_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>