force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Notes__c</fullName>
    <description>Notes concerning the dependency or deliverable (e.g. why it is needed, acceptance criteria, more detailed description, etc.)</description>
    <inlineHelpText>Notes concerning the dependency or deliverable (e.g. why it is needed, acceptance criteria, more detailed description, etc.)</inlineHelpText>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>