force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Provider_Team__c.field-meta.xml
<CustomField>
    <fullName>agf__Provider_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team that will provide the deliverable to fulfill this dependency.</description>
    <inlineHelpText>The team that will provide the deliverable to fulfill this dependency.</inlineHelpText>
    <label>Team Providing Deliverable</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Team Providing Deliverable you selected is not active.</errorMessage>
        <filterItems>
            <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
            <operation>notEqual</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
    <relationshipLabel>Dependencies other teams have on us</relationshipLabel>
    <relationshipName>Dependencies_on_us</relationshipName>
    <type>Lookup</type>
</CustomField>