force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__Target_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Target_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The build in which you would like the deliverable completed.</description>
    <inlineHelpText>The build in which you would like the deliverable completed. If the deliverable is not associated with a specific build, enter the major product release corresponding to the season in which this deliverable is needed (e.g. 162 - Winter &apos;10).</inlineHelpText>
    <label>Target Build</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Team Dependencies</relationshipLabel>
    <relationshipName>Team_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>