force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__User_Story_Position_on_Backlog__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Story_Position_on_Backlog__c</fullName>
    <formula>agf__Provider_User_Story__r.agf__Priority_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The position of the work on the backlog of the team doing the work.</inlineHelpText>
    <label>Work Position on Backlog</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>