force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/fields/agf__User_Story_Scheduled_Release__c.field-meta.xml
<CustomField>
    <fullName>agf__User_Story_Scheduled_Release__c</fullName>
    <formula>NULLVALUE( agf__Provider_User_Story__r.agf__Scheduled_Build__r.Name,&quot;Not Scheduled&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The build in which the work is scheduled to be completed.</inlineHelpText>
    <label>Work Scheduled Build</label>
    <type>Text</type>
</CustomField>