force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/validationRules/agf__Check_Provider_User_Story.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Check_Provider_User_Story</fullName>
    <active>true</active>
    <description>In order for the dependency status to be changed to &apos;Prioritized&apos; or &apos;Committed&apos;, there must be a user story linked to the dependency for the work to be done .</description>
    <errorConditionFormula>(ISPICKVAL( agf__Dependency_Status__c, &quot;Prioritized&quot;) ||  ISPICKVAL( agf__Dependency_Status__c, &quot;Committed&quot;)) &amp;&amp; (ISBLANK(agf__Provider_User_Story__c))</errorConditionFormula>
    <errorDisplayField>agf__Provider_User_Story__c</errorDisplayField>
    <errorMessage>A user story for the deliverable must be linked to the dependency in order to set the dependency status to &quot;Prioritized&quot; or &quot;Committed&quot;.</errorMessage>
</ValidationRule>