force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/validationRules/agf__Needed_By_Date_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Needed_By_Date_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Deliver_By__c &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>agf__Deliver_By__c</errorDisplayField>
    <errorMessage>The &apos;Needed By&apos; date cannot be in the past.</errorMessage>
</ValidationRule>