force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/validationRules/agf__Provider_Team_Is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Provider_Team_Is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Provider_Team__r.agf__Active__c = false</errorConditionFormula>
    <errorDisplayField>agf__Provider_Team__c</errorDisplayField>
    <errorMessage>The Team Providing Deliverable you selected is not active.</errorMessage>
</ValidationRule>