force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/validationRules/agf__Teams_Cannot_Be_The_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Teams_Cannot_Be_The_Same</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Provider_Team__c = agf__Dependent_Team__c</errorConditionFormula>
    <errorMessage>Team Providing Deliverable and Team With Dependency cannot be the same!</errorMessage>
</ValidationRule>