force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/listViews/agf__CSS_UI_Dependencies.listView-meta.xml
<ListView>
    <fullName>agf__CSS_UI_Dependencies</fullName>
    <columns>agf__Deliverable__c</columns>
    <columns>NAME</columns>
    <columns>agf__Provider_Team__c</columns>
    <columns>agf__Dependency_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Dependent_Team__c</field>
        <operation>equals</operation>
        <value>CSS UI</value>
    </filters>
    <label>CSS UI Dependencies</label>
</ListView>