force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/listViews/agf__Oppty2Quote_Dependencies.listView-meta.xml
<ListView>
    <fullName>agf__Oppty2Quote_Dependencies</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>agf__Dependency_Status__c</columns>
    <columns>agf__Dependent_Team__c</columns>
    <columns>agf__Provider_Team__c</columns>
    <columns>agf__Deliverable__c</columns>
    <columns>agf__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Dependent_Team__c</field>
        <operation>equals</operation>
        <value>Opportunity to Quote</value>
    </filters>
    <filters>
        <field>agf__Provider_Team__c</field>
        <operation>equals</operation>
        <value>Opportunity to Quote</value>
    </filters>
    <label>Oppty2Quote Dependencies</label>
</ListView>