force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/listViews/agf__Webstore_Dependencies.listView-meta.xml
<ListView>
    <fullName>agf__Webstore_Dependencies</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>agf__Deliverable__c</columns>
    <columns>agf__Dependency_Status__c</columns>
    <columns>agf__Deliver_By__c</columns>
    <columns>agf__Notes__c</columns>
    <columns>agf__Provider_Team__c</columns>
    <columns>agf__Dependent_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Dependent_Team__c</field>
        <operation>equals</operation>
        <value>Webstore</value>
    </filters>
    <filters>
        <field>agf__Provider_Team__c</field>
        <operation>equals</operation>
        <value>Webstore</value>
    </filters>
    <label>Webstore Dependencies</label>
</ListView>