force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/listViews/agf__X162_Core_Team_Dependencies.listView-meta.xml
<ListView>
    <fullName>agf__X162_Core_Team_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>agf__Dependent_Team__c</columns>
    <columns>agf__Deliverable__c</columns>
    <columns>agf__Deliver_By__c</columns>
    <columns>agf__Provider_Team__c</columns>
    <columns>agf__Provider_User_Story__c</columns>
    <columns>agf__Dependency_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>agf__Dependent_Team__c</field>
        <operation>equals</operation>
        <value>Core Infrastructure</value>
    </filters>
    <label>162 Core Team Dependencies</label>
</ListView>