force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/listViews/agf__X162_Dependencies.listView-meta.xml
<ListView>
    <fullName>agf__X162_Dependencies</fullName>
    <columns>NAME</columns>
    <columns>agf__Dependent_Team__c</columns>
    <columns>agf__Deliverable__c</columns>
    <columns>agf__Deliver_By__c</columns>
    <columns>agf__Provider_Team__c</columns>
    <columns>agf__Provider_User_Story__c</columns>
    <columns>agf__Dependency_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>162 Dependencies</label>
</ListView>