force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Dependency__c/listViews/agf__X162_Team_Dependencies1.listView-meta.xml
<ListView>
    <fullName>agf__X162_Team_Dependencies1</fullName>
    <columns>NAME</columns>
    <columns>agf__Dependent_Team__c</columns>
    <columns>agf__Deliverable__c</columns>
    <columns>agf__Deliver_By__c</columns>
    <columns>agf__Provider_Team__c</columns>
    <columns>agf__Provider_User_Story__c</columns>
    <columns>agf__Dependency_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Dependent_Team__c</field>
        <operation>contains</operation>
        <value>Knowledge</value>
    </filters>
    <label>162 Knowledge Dependencies</label>
</ListView>